# peeksy

./: .env  .gitignore  Cargo.toml  README.md  com.peeksy.plist  index.html  prompt.txt
Formula/: peeksy.rb
src/: ai.rs  file.rs  lib.rs  main.rs  peeksy.rs
src/cli/: cli.rs
src/cli/handlers/: config.rs  status.rs
src/config/: config.rs  mod.rs  setup.rs  utils.rs
src/daemon/: file.rs  mod.rs  peeksy.rs  runner.rs
src/launchd/: launchd.rs
src/logger/: logger.rs
src/manager/: ai.rs  image.rs
