[package]
name = "peeksy"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
notify = "6"
chrono = "0.4"
simplelog = "0.12"
log = "0.4"
dirs = "5.0"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
tokio = { version = "1.45.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
# creating a cli
